--- a/primer proyecto/Gemfile
+++ b/primer proyecto/Gemfile
@@ -32,6 +32,9 @@ gem 'jbuilder', '~> 2.5'
 
 # agregar gema 
 gem 'bootstrap'
+gem 'carrierwave'
+gem 'mini_magick'
+gem 'devise', git: 'git://github.com/plataformatec/devise.git'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
